# Qt_QML_Projects

./: README.md
01_Project/: 01_Project.pro  main.qml
02_Project_Calculator/: main.qml  main.qml.autosave
03_Project_ToDoList/: 03_Project_ToDoList.pro  MyButton.qml  main.qml
04_UserLoginPage/: 04_UserLoginPage.pro  main.cpp  main.qml  qml.qrc  resources.qrc
05_TelephoneDirectory/: main.qml
06_MessagingApp/: main.qml
07_KitchenMachine/: main.qml  qml.qrc
07_KitchenMachine/pages/: modesPage.qml
08_SignalsAndSlots_Example/: 08_SignalsAndSlots_Example.pro  back.cpp  back.h  main.cpp  main.qml
09_SignalsAndSlots_Stackview_example/: back.cpp  back.h  main.cpp  main.qml
10_CounterApp_SignalsAndSlots/: 10_CounterApp_SignalsAndSlots.pro  counter.cpp  counter.h  main.cpp  main.qml
11_SerialCommunication/SerialComm/: SerialComm.pro  main.cpp  main.qml  messagemodel.h  serialcommunication.cpp  serialcommunication.h
12_CoffeeMachine/CoffeeMachine/: CMakeLists.txt  CoffeeMachine.qmlproject  (+2 more)
12_CoffeeMachine/Coffee_Machine/: CMakeLists.txt  Coffee_Machine.qmlproject  coffeemach.cpp  coffeemach.h  main.qml  messagehandler.cpp  messagehandler.h  qmlmodules
12_CoffeeMachine/Coffee_Machine/content/: App.qml  CMakeLists.txt  Screen01.ui.qml
12_CoffeeMachine/Coffee_Machine/imports/: CMakeLists.txt
12_CoffeeMachine/Coffee_Machine/imports/Coffee_Machine/: CMakeLists.txt  qmldir
12_CoffeeMachine/Coffee_Machine/imports/Coffee_Machine/designer/: plugin.metainfo
12_CoffeeMachine/Coffee_Machine/src/: import_qml_plugins.h  main.cpp
SerialComm/: messagemodel.cpp
(+5 files in other folders)
